# sugarloaf

./: pyproject.toml  setup.py
notebooks/: MAF_exploration.ipynb  chemberta_cluster_output.csv  chemberta_trial.ipynb  drug_exploratoin.ipynb  drug_smiles.pkl
src/data/: smiles.py
src/embeddings/: chemberta.py
sugarloaf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: chembtera_test.py
